<resources>
    <string name="app_name">NeRecipes</string>
    <string name="cookbook">cookbook</string>
    <string name="search">search</string>
    <string name="content_description_search">search</string>
    <string name="recipe_description">Description</string>
    <string name="content_description_more">more</string>
    <string name="favorites">favorites</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="menu_edit">menu_edit</string>
    <string name="recipe_icon">recipe icon</string>
    <string name="edit">edit</string>
    <string name="asian">asian</string>
    <string name="american">american</string>
    <string name="european">european</string>
    <string name="russian">russian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="recipe_time_suffix">Minutes</string>
    <string name="recipe_time">Time</string>
    <string name="enter_recipe">Enter recipe</string>
    <string name="create_recipe">create recipe</string>
    <string name="types">Types</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="all">all</string>
    <string name="recipe">Recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_filter">Set filter</string>
    <string name="adding_recipe">adding recipe</string>
    <string name="filter" />
    <string name="open_filter">Open filter</string>
    <string name="menu">menu</string>
    <string name="remove_big">Remove</string>
    <string name="cancel">cancel</string>
    <string name="time">Time:</string>
    <string name="filterBar">Filter</string>
    <string name="allBar">All</string>
    <string name="favoritesBar">Favorites</string>
    <string name="nothing_added">Nothing added</string>
    <string name="cancel_filter">cancel filter</string>
</resources>