<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRecipeImage"
                style="@style/icon_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:visibility="gone" />

        </FrameLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRecipeName"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText style="@style/textInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRecipeDescription"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/recipe_description">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditText"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTime"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/recipe_time"
            app:suffixText="@string/recipe_time_suffix">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding_more" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtRecipe"
            style="@style/fullWidthTextInputLayout"
            android:hint="@string/enter_recipe">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/section_title"
            android:text="@string/types" />
        <CheckBox
            android:id="@+id/checkbox_eu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/european" />
        <CheckBox
            android:id="@+id/checkbox_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asian" />
        <CheckBox
            android:id="@+id/checkbox_na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american" />
        <CheckBox
            android:id="@+id/checkbox_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateRecipe"
            style="@style/fullWidthButton"
            android:text="@string/edit_recipe" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/app_padding" />
    </LinearLayout>

</ScrollView>