<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".fragments.RecipeViewFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/typeDetailList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:orientation="horizontal" />
        <include
            android:id="@+id/recipeView"
            layout="@layout/recipe" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recipeDetailImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:srcCompat="@color/purple_700" />

    </FrameLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/app_padding_more" />


    <TextView
        android:id="@+id/recipeDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/section_title"
        tools:text="Recipe name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipeDetailDescription"
                style="@style/text_full_width"
                android:layout_marginBottom="@dimen/app_padding_more"
                tools:text="Description" />

            <TextView
                android:id="@+id/recipeDetailTime"
                style="@style/section_title"
                android:textSize="@dimen/default_text_size"
                tools:text="Time: 1h" />

            <TextView
                style="@style/section_title"
                android:text="@string/category" />


            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/app_padding" />

            <CheckBox
                android:id="@+id/checkbox_eu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/european" />
            <CheckBox
                android:id="@+id/checkbox_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asian" />
            <CheckBox
                android:id="@+id/checkbox_na"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american" />
            <CheckBox
                android:id="@+id/checkbox_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/app_padding_more" />

            <TextView
                style="@style/section_title"
                android:text="@string/recipe" />


            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/app_padding" />


            <TextView
                android:id="@+id/recipe_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="one random recipe"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
